# R-Type

./: CMakeLists.txt  build.sh  readme.md
client/assets/test/: servers.json
client/headers/Client/: Client.hpp
client/headers/Components/: Background.hpp  Button.hpp  Components.hpp  Option.hpp  ServerList.hpp
client/src/: main.cpp
client/src/Client/: Client.cpp  GameScene.cpp  LobbyScene.cpp  MenuScene.cpp  OptionsScene.cpp  ServerSelectionScene.cpp
client/src/Components/: Background.cpp  Button.cpp  ServerList.cpp
game/headers/: ComponentsFactory.hpp  EntityFactory.hpp  Game.hpp  Systems.hpp
game/src/: EntityFactory.cpp  Game.cpp
game/src/Systems/: Systems.cpp
server/headers/Network/: Server.hpp
server/src/: Protocol.md  main.cpp
server/src/Network/: Server.cpp
